feat: work on tag assignments for 'review-edit'
Add capability of adding tags from 'popular tags' section to
'applied tags', as well as removing them and putting them back into
'popular tags' with plus sign and tag count in place

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -70,7 +70,11 @@ form.unpublish-book, form.delete-book {
   padding: .5em;
 }
 
-.remove-tag-x {
+.remove-tag-x, .add-tag-plus{
   font-weight: bold;
   cursor: pointer;
+}
+
+.not-visible {
+  display: none;
 }
