feat: tag search for 'review-edit' view
Add axios, route, controller, etc. to search for tags by title, for
proof of concept.

TODO: display results as dropdown to click and add to 'applied tags'

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -46,7 +46,7 @@
 				},
 			  });
 		</script>
-
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.5.0/axios.min.js" integrity="sha512-NiIeAO3FjE+wibqvRIkkpYN/ViSYqRh4+D5upMLV7+59mXdGRD2V7gbXeJkX6WT25fdDsQ7QwiUaZToPUkeqTA==" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="/stylesheets/style.css">
 
     </head>
