--- a/views/reviews/review-edit.ejs
+++ b/views/reviews/review-edit.ejs
@@ -18,7 +18,7 @@
                                     </div>
                                 <% } %>
                             </div>
-                            
+                            <input type="text" name="tag-search" id="tag-search" class="form-control" placeholder="Search for tags">
                         </div>
                     </div>
                     <div class="row">
