feat: search & add tags to 'review-edit'
Use Axios AJAX call to find tags based on search, display them below
search box (with tooltip of substring of description), then be able to
add them to 'applied tags', and if removed, move them back down to
search results (but only if there is still something in the search box).

Will have to find out whether having the input field without a name for
this search will come back to bite me when actually submitting the PUT
request for the review

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -78,3 +78,13 @@ form.unpublish-book, form.delete-book {
 .not-visible {
   display: none;
 }
+
+.quick-result {
+  border: 1px solid black;
+  padding: 1em;
+  margin-top: -1px;
+}
+
+.quick-result-title {
+  text-decoration: underline;
+}
