feat: minor styling of 'review-edit' view

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -88,3 +88,12 @@ form.unpublish-book, form.delete-book {
 .quick-result-title {
   text-decoration: underline;
 }
+
+legend {
+  display: none;
+}
+
+#wasBookFinished {
+  height: 15px;
+  width: 15px;
+}
