--- a/views/reviews/review-details.ejs
+++ b/views/reviews/review-details.ejs
@@ -61,7 +61,7 @@
                                     </div>
                                     <div class="col-12 col-md-6 date-finished">
                                         <% if (!currentReview.bookFinished && currentReview.bookFinishedDate) { %>
-                                            Re-shelved: <%= currentReview.finishedDate.toLocaleDateString('en-US', dateStringOptions); %>
+                                            Re-shelved: <%= currentReview.bookFinishedDate.toLocaleDateString('en-US', dateStringOptions); %>
                                         <% } else if (!currentReview.bookFinished && !currentReview.bookFinishedDate) { %>
                                             Currently Reading
                                         <% } else if (currentReview.bookFinished) { %> 
