feat: work I can't remember
TODO: Fix dates changing back and forth between local and UTC and
causing changes in the DB even if date isn't changed on form

TODO: Tag cloud for popular tags on 'review details' -- Use partial,
have to calculate highestCount, etc. like in 'book details'

--- a/views/reviews/review-details.ejs
+++ b/views/reviews/review-details.ejs
@@ -23,6 +23,8 @@
                                     <a href="/books/?tag=<%= tag.id %>&resource=Book"><%= tag.title %></a>&nbsp;(<%= tag.count %>)<%= popularTags.indexOf(tag) < popularTags.length - 1 ? ', ' : '' %>
                                 <% } %>
                             <% } %>
+                            
+                            <%#- include('../partials/tag-cloud', {tags: popularTags}); %>
                         </div>
                     </div>
                 </div>
