--- a/views/reviews/review-details.ejs
+++ b/views/reviews/review-details.ejs
@@ -18,13 +18,13 @@
                     <div class="row">
                         <div class="col">
                             <h4>Popular Tags for This Book</h4>
-                            <% for (let tag of popularTags) { %>
-                                <% if (tag.count > 1) { %>
-                                    <a href="/books/?tag=<%= tag.id %>&resource=Book"><%= tag.title %></a>&nbsp;(<%= tag.count %>)<%= popularTags.indexOf(tag) < popularTags.length - 1 ? ', ' : '' %>
-                                <% } %>
-                            <% } %>
+                            <%# for (let tag of popularTags) { %>
+                                <%# if (tag.count > 1) { %>
+                                    <!-- <a href="/books/?tag=<%#= tag.id %>&resource=Book"><%#= tag.title %></a>&nbsp;(<%#= tag.count %>)<%#= popularTags.indexOf(tag) < popularTags.length - 1 ? ', ' : '' %> -->
+                                <%# } %>
+                            <%# } %>
                             
-                            <%#- include('../partials/tag-cloud', {tags: popularTags}); %>
+                            <%- include('../partials/tag-cloud', {tags: popularTags, highestCount}); %>
                         </div>
                     </div>
                 </div>
