--- a/views/reviews/review-edit.ejs
+++ b/views/reviews/review-edit.ejs
@@ -84,16 +84,26 @@
                                                 Started
                                             </label>
                                         </div>
+                                        <% let startedDateString = currentReview.bookStartedDate.getFullYear() + 
+                                        "-" + 
+                                        (currentReview.bookStartedDate.getMonth() < 9 ? "0" + (currentReview.bookStartedDate.getMonth() + 1) : (currentReview.bookStartedDate.getMonth() + 1)) + 
+                                        "-" + 
+                                        currentReview.bookStartedDate.getDate(); %>
                                         <input type="date" name="review[bookStartedDate]" id="bookStartedDate" class="form-control" 
-                                            value="<%= new Date(currentReview.bookStartedDate.toLocaleDateString('en-US',{})).toISOString().split('T')[0] %>">
+                                            value="<%= startedDateString %>">
                                     </div>
                                     <div class="col-12 col-md-6 date-finished input-group">
+                                        <% let finishedDateString = currentReview.bookStartedDate.getFullYear() + 
+                                        "-" + 
+                                        (currentReview.bookFinishedDate.getMonth() < 9 ? "0" + (currentReview.bookFinishedDate.getMonth() + 1) : (currentReview.bookFinishedDate.getMonth() + 1)) + 
+                                        "-" + 
+                                        currentReview.bookFinishedDate.getDate(); %>
                                             <% if (!currentReview.bookFinished && currentReview.bookFinishedDate) { %>
                                                 <div class="input-group-prepend">
                                                     <label class="input-group-text" for="bookFinishedDate">Re-shelved</label> 
                                                 </div>
                                                 <input type="date" name="review[bookFinishedDate]" id="bookFinishedDate" class="form-control" 
-                                                    value="<%= new Date(currentReview.bookFinishedDate.toLocaleDateString('en-US', {})).toISOString().split('T')[0] %>" >
+                                                    value="<%= finishedDateString %>" >
                                             <% } else if (!currentReview.bookFinished && !currentReview.bookFinishedDate) { %>
                                                 Currently Reading
                                             <% } else if (currentReview.bookFinished) { %>
@@ -101,7 +111,7 @@
                                                     <label class="input-group-text" for="bookFinishedDate">Finished</label>
                                                 </div>
                                                 <input type="date" name="review[bookFinishedDate]" id="bookFinishedDate" class="form-control" 
-                                                    value="<%= new Date(currentReview.bookFinishedDate.toLocaleDateString('en-US', {})).toISOString().split('T')[0] %>">
+                                                    value="<%= finishedDateString %>">
                                             <% } %>
                                     </div>
                                 </div>
