--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -65,8 +65,10 @@
 				  </button>
 				  <div class="collapse navbar-collapse" id="navHamburger">
 					<a class="nav-link js-scroll-trigger" href="/">Dashboard</a>
-					<a class="nav-link js-scroll-trigger" href="/books/read?author=<%= currentUser.id %>&resource=Review&page=1">Books I've Read</a>
-					<a class="nav-link js-scroll-trigger" href="/books/recommendations?resource=Book&page=1">Recommendations</a>
+					<% if (currentUser) { %>
+						<a class="nav-link js-scroll-trigger" href="/books/read?author=<%= currentUser.id %>&resource=Review&page=1">Books I've Read</a>
+						<a class="nav-link js-scroll-trigger" href="/books/recommendations?resource=Book&page=1">Recommendations</a>
+					<% } %>
 					<a class="nav-link js-scroll-trigger" href="/books?resource=Book&page=1">Browse Books</a>
 				  </div>
 				</nav>
