--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -64,12 +64,23 @@
 					</span>
 				  </button>
 				  <div class="collapse navbar-collapse" id="navHamburger">
-					<a class="nav-link js-scroll-trigger" href="/">Dashboard</a>
-					<% if (currentUser) { %>
-						<a class="nav-link js-scroll-trigger" href="/books/read?author=<%= currentUser.id %>&resource=Review&page=1">Books I've Read</a>
-						<a class="nav-link js-scroll-trigger" href="/books/recommendations?resource=Book&page=1">Recommendations</a>
-					<% } %>
-					<a class="nav-link js-scroll-trigger" href="/books?resource=Book&page=1">Browse Books</a>
+					<ul class="nav navbar-nav">
+						<a class="nav-link js-scroll-trigger" href="/">Dashboard</a>
+						<% if (currentUser) { %>
+							<a class="nav-link js-scroll-trigger" href="/books/read?author=<%= currentUser.id %>&resource=Review&page=1">Books I've Read</a>
+							<a class="nav-link js-scroll-trigger" href="/books/recommendations?resource=Book&page=1">Recommendations</a>
+						<% } %>
+						<a class="nav-link js-scroll-trigger" href="/books?resource=Book&page=1">Browse Books</a>
+					</ul>
+					
+					<ul class="nav navbar-nav ml-auto">
+						<% if (currentUser) { %>
+							<li><a class="nav-link js-scroll-trigger" href="/logout">Log out</a></li>
+						<% } else if (typeof currentUser === 'undefined' ) { %>
+							<li><a class="nav-link js-scroll-trigger" href="/login">Log in</a>	</li>
+							<li><a class="nav-link js-scroll-trigger" href="/register">Sign Up</a>	</li>
+						<% } %>
+					</ul>
 				  </div>
 				</nav>
 			</div>	
