--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,6 +14,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
+            <p>Don't have an account yet? <a href="/register">Sign up now!</a></p>
         </div>
     </div>
 </div>
