--- a/views/register.ejs
+++ b/views/register.ejs
@@ -26,6 +26,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
+            <p>Already have an account? <a href="/login">Log in here!</a></p>
         </div>
     </div>
 </div>
