feat: work on 'review-create' view
Add structure for results of recent reviews by other users

TODO: Figure out why the .row.result is so wide

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -97,3 +97,12 @@ legend {
   height: 15px;
   width: 15px;
 }
+
+.review-text-preview {
+  width: 80%;
+  overflow: hidden;
+}
+
+.result.row {
+  border: 1px solid black;
+}
