feat: books by same author on review details
Lots of work to get this working, plenty of refactoring. Includes
automatic creation of books in our DB based on matching books from
google books in order to be available to immediately write a review

--- a/views/books/book-details.ejs
+++ b/views/books/book-details.ejs
@@ -5,7 +5,11 @@
             <div class="row">
                 <div class="col">
                     <h2>Tags</h2>
-                    <%- include('../partials/tag-cloud'); %>
+                    <% if (tags && tags.length) { %>
+                        <%- include('../partials/tag-cloud'); %>
+                    <% } else { %>
+                        No tags applied to this book
+                    <% } %>
                 </div>
             </div>
         </section>
@@ -39,7 +43,7 @@
                                                 <%= googleBook.volumeInfo.authors %>
                                             <% } %>
                                         </h3>
-                                        <% if(currentUser.role = 'owner') { %>
+                                        <% if(currentUser && (currentUser.role === 'owner' || currentUser.id === currentBook.createdBy)) { %>
                                             <div class="row" id="owner-controls">
                                                 <% if (currentBook.active) { %>
                                                 <div class="col">
