--- a/views/partials/book-card.ejs
+++ b/views/partials/book-card.ejs
@@ -11,7 +11,12 @@
             <% } %>
             <h4 class="card-title book-card-title pl-1" id="<%= document.id + '-title' %>"><%= document.title.length > 25 ? document.title.substr(0,20)+'...' : document.title %></h4>
         </a>
-        <p class="card-text book-card-rating" id="<%= document.id + '-rating' %>"><%- include('display-stars', {rating: document.averageRating, numberOfRatings: document.numberOfRatings, resourceType}) %></p> <!-- partial with tooltips that 1 star = 'hated', etc. -->
+        <p class="card-text book-card-rating" id="<%= document.id + '-rating' %>">
+            <% if (!document.numberOfRatings || document.numberOfRatings < 1) { %>
+                No Reviews yet
+            <% } else { %>
+                <%- include('display-stars', {rating: document.averageRating, numberOfRatings: document.numberOfRatings, resourceType: 'Book'}) %></p> <!-- partial with tooltips that 1 star = 'hated', etc. -->
+            <% } %>
         <p class="card-text book-card-tags" id="<%= document.id + '-tags' %>">
             <% if (document.tags.length) { %>
                 <% const numberOfTagsToDisplay = document.tags.length < 5 ? document.tags.length : 5; %>
@@ -39,7 +44,9 @@
                 <a href="<%= googleBooksLink %>" target="_blank"><img src="/images/poweredbygoogle.png" alt="Powered by Google"></a>
             </div>
             <div class="col">
-                <a href="/reviews/<%= document.id %>">Edit Review</a>
+                <% if (currentUser && currentUser.role === 'owner') { %>
+                    <a href="/books/<%= document.id %>">Edit Book</a>
+                <% } %>
             </div>
         </div>
     </div>
